<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostActivity">

    <TextView
        android:id="@+id/edit_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginBottom="2dp"
        android:background="@android:color/transparent"
        android:text="@string/description_post_edit_message"
        android:textColor="#54A9E7"
        android:textStyle="bold"
        android:paddingTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_sign" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:singleLine="true"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/edit_message"
        app:layout_constraintEnd_toStartOf="@id/close_edit"
        app:layout_constraintStart_toEndOf="@id/edit_sign"
        tools:text="@tools:sample/lorem[10]"
        android:paddingBottom="8dp"/>

    <ImageView
        android:id="@+id/edit_sign"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_edit"
        android:src="@drawable/pencil_edit_button"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close_edit"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_edit"
        android:src="@drawable/close"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content_text"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        android:layout_marginBottom="8dp"
        app:constraint_referenced_ids="edit_sign, edit_message, close_edit, content_text" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/barrier_top"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        tools:text="@tools:sample/lorem[35]" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        android:layout_marginBottom="8dp"
        app:constraint_referenced_ids="save" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:paddingTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_save"
        android:src="@drawable/ic_save_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>